--- a/how-to-choose-seo-agency.html
+++ b/how-to-choose-seo-agency.html
@@ -1987,7 +1987,7 @@ The standard path of customer acquisition in the Agency begins with a conversati
 
 
 
-<br><br>Find more information here: <a href="https://wolhun.github.io/business-blog/how-to-choose-seo-agency.html">Lokale Suchmaschinenoptimierung aus Hambur</a><br>
+<br><br>Find more information here: <a href="https://wolhun.github.io/business-blog/how-to-choose-seo-agency.html">Lokale Suchmaschinenoptimierung aus Hamburg</a><br>
 
 <br><br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2368.8584170695062!2d10.039489!3d53.578143399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfde4ac845b7be47e!2sranklike%20-%20Online%20Marketing%20SEO!5e0!3m2!1sde!2spt!4v1662304099388!5m2!1sde!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">ranklike - Online Marketing SEO Hamburg, Hamburger Straße 180, 22083 Hamburg</iframe>
