--- a/seo-agency-blog.html
+++ b/seo-agency-blog.html
@@ -1952,7 +1952,7 @@ How to choose a SEO agency
 
 
 
-Are you looking for an effective SEO agency? See what to look for when choosing!
+What to look for when choosing an SEO Agency
 
                     <!-- NAGŁÓWEK  KONIEC-->
                 </div>
@@ -1966,36 +1966,33 @@ Are you looking for an effective SEO agency? See what to look for when choosing!
 
 
 
-From year to year, more and more agencies specializing in internet marketing appear on the Polish market. They often tempt with prices, quick effects or additional benefits for the client. But what elements are really worth paying attention to in order to trust the right company and have a guarantee of success? We have prepared a list to help you make the right choice!
-<br><br>
-1. Method of settlement<br>
-Before signing a contract with an agency, pay attention to the proposed form of settlement for the website positioning service. Most often, we can meet two methods:
+
+
+SEO-brief
 <br>
- clearing for items<br>
- permanent subscription<br><br>
-The first form of settlement may and sounds attractive, because you only pay the cost when the selected phrase is positioned. However, there is a catch here. In this model, the SEO agency wants to position the website as quickly as possible in order to be able to issue an invoice as soon as possible. However, fast website positioning is very risky for your website. It happens that SEOs engage in prohibited practices that may result in permanent removal of your website from search results. No wonder that agencies are increasingly departing from the model of accounting for the effect.
+The first element worth paying attention to at the stage of searching for an SEO agency is how the company tries to find out a little more about the potential client, whether he asks, among others, about:<br>
+the business goals of the client organization;<br>
+competitive advantages and factors proving unique features compared to the competition;<br>
+a margin on the sale of services or products (this is important in terms of return on investment and budgeting for SEO activities);<br>
+the specificity of the market and its competitiveness (along with listing the largest competitors in a given industry);<br>
+keywords that the potential client cares about (of course, it happens very often that clients do not have knowledge in this topic and are unable to compile such a list and prefer to outsource it to an agency.<br><br> However, if the client is aware of SEO services - this question can support the process bidding).<br><br>
+Keyword selection
+<br>
+This is an important moment before establishing cooperation with a positioning company. The process of selecting key phrases is a comprehensive analysis of the current condition of the website (offered products or services) and the analysis of competitors' websites. On the basis of analyzes of your website and competitors' websites, you should submit a list of keywords (those that are reflected in the customer's business and should be phrases of varying competitiveness and detail - paying attention to words that can generate "caloric" traffic and long tail phrases that due to their precision, these phrases will be able to guarantee sales in a relatively shorter time than more general phrases - this is due to the fact that the searched products / services by highly detailed keywords are usually searched by people who know what they are looking for on the Internet / conscious purchasing decisions ).<br> In the case of online stores, it is difficult to focus on a closed list of keywords, so in this situation it is worth focusing on variable keywords that will have the task of gradually increasing traffic on the website - and not the typical struggle for specific phrases. <br>Where, with a very extensive range, it would be ineffective or absorbed very large budgets. The selection of key phrases should focus on phrases that will realistically contribute to the growth of valuable traffic to the client's website. However, it cannot be treated that the SEO Agency will deliver the sale (if the client does not quickly implement the suggested changes to the website resulting from the SEO audit and subsequent recommendations - the SEO Agency will not deliver the sale, because the traffic to the website will be wasted).<br><br>
+An improperly conducted analysis in terms of selecting keywords may result in missing expectations on the line: entrepreneur - SEO agency. A common mistake of SEO companies is also the selection of phrases with zero competitiveness (zero average monthly search in the Google search engine). Such phrases may sound very meaningful, but they will not bring valuable traffic to the customer's website (such traffic after which one would expect a sales lead to fall).
 <br><br>
-A much safer and proven method is a fixed monthly fee, the so-called subscription. In this model, the visibility of your website is built naturally and gradually. The goal is not only to get as many phrases as possible into the TOP10 of Google, but above all to increase traffic and conversion on the website. This form of settlement is offered, for example, by the Visoczni agency, which bases its strategy on a long-term plan, engages many specialists in the project and primarily thinks about real profits for the client.
-<br><br>
-2. The method of communication between the client and the agency<br>
-How and how often your agency will communicate with you regarding its activities is extremely important. First, find out if an individual project team, including a customer manager, will be dedicated to your company. It is very important that you can contact regular people, implemented in the status of works on your website and responsible for the actions, every time. In addition, check how often the agency sends reports summarizing the results of its work. Are they weekly, monthly or quarterly reports?
-<br><br>
-When you think about choosing an agency that will position your website, you probably wonder if it has to be from the same city as you. Well, there is no such necessity. Positioning is a service that can be 100% performed virtually, and all consultations and meetings can be arranged remotely. You don't have to be limited only to agencies located in your area. You can even choose the one from the other end of Poland. To be sure of constant contact with the agency, find out how often and in what form you can count on a video meeting with the team and whether your guardian will be available by phone in case of doubts or problems.
-<br><br>
-3. Opinions on the web<br>
-Do you want to know how a given agency is rated by its existing customers? Ask for feedback on the web! Check what other people write about a given company, for example on the company's profile on Google, Facebook. If you do not trust the opinions on these channels, check the recommendations on Clutch.co. Clutch.co because a very reliable opinion channel, where users describe in detail the course of cooperation and are signed with real data (name, surname, company name and position).
-<br><br>
-Apart from the opinions of clients, it is worth paying attention to the opinions written by the agency employees themselves. This will allow you to verify that the atmosphere inside the company is okay and the team performs its work with passion and commitment.
-<br><br>
-4. Values ​​and work ethic<br>
-A professional agency certainly has its own labor code and values ​​written down. Reading such a document will allow you to better understand how the agency works and find out what is important to its employees. In the case of the SEO industry, it is particularly important that the work is carried out reliably and in accordance with the rules imposed by Google.
+Transparency of SEO agency activities
+<br>
+In my opinion, this is a value that every SEO company should follow. Bearing in mind that there is still a lot of ignorance among entrepreneurs about SEO itself. Only full transparency of the activities carried out will be able to provide a positive result for the education process in the field of search engine operation. Transparency is also informing the client about things that cannot be achieved (whether within a given budget or also regarding time). Transparency of SEO activities is customer access to all data related to their project. In a situation where agency "X" does not want to share data with its client (using some "secret" knowledge), it should be a clear message about breaking such an important factor in the business partnership of both parties.<br><br>
+SEO audit
+<br>
+It is a detailed analysis of the current condition of the website. This analysis should include specific changes within the website, aimed at improving the level of website optimization in terms of selected key phrases (included in the contract). The audit should be prepared at the very beginning of the service, so that you can effectively conduct SEO activities in the coming months. The audit itself should contain elements related to the improvement of optimization in terms of technical and content. An additional element that may be analyzed in the audit is the analysis of the current linking profile of the website. All these analyzes should be completed with specific solutions presented in the form of recommendations or ready-made elements to be implemented on the website, whether on the side of the entrepreneur or the implementation team.
 
 
 
 
 
-
-<br><br>Find more information here: <a href="https://business-seminar.s3.eu-de.cloud-object-storage.appdomain.cloud/seo-agency-blog.html">Lokal-SEO-Hamburg</a><br>
+<br><br>Find more information here: <a href="https://wolhun.github.io/business-blog/seo-agency-blog.html">Experte für Local SEO Hamburg</a><br>
 
 <br><br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2368.8584170695062!2d10.039489!3d53.578143399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfde4ac845b7be47e!2sranklike%20-%20Online%20Marketing%20SEO!5e0!3m2!1sde!2spt!4v1662304099388!5m2!1sde!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">ranklike - Local SEO Hamburg, Hamburger Straße 180, 22083 Hamburg</iframe>
